--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "angular-oauth2-oidc-jwks": "^13.0.1",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.1.2",
     "ng-angular-popup": "^0.2.0",
+    "ng2-charts": "^4.1.1",
+    "ng2-datepicker": "^12.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
