--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.1.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "ng-angular-popup": "^0.2.0",
     "ng2-charts": "^4.1.1",
     "ng2-datepicker": "^12.0.0",
