--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng2-charts": "^4.1.1",
     "ng2-datepicker": "^12.0.0",
     "rxjs": "~7.5.0",
+    "uuid": "^9.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,6 +38,7 @@
     "@angular/cli": "~14.2.7",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/uuid": "^9.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
