--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,38 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+/doc/
+doc/fonts/IBMPlexSans-Bold.ttf
+doc/fonts/IBMPlexSans-BoldItalic.ttf
+doc/fonts/IBMPlexSans-Italic.ttf
+doc/fonts/IBMPlexSans-Regular.ttf
+doc/fonts/JetBrainsMono-Bold.ttf
+doc/fonts/JetBrainsMono-BoldItalic.ttf
+doc/fonts/JetBrainsMono-Italic.ttf
+doc/fonts/JetBrainsMono-Regular.ttf
+doc/fonts/mplus-1m-regular.ttf
+doc/fonts/mplus-1mn-bold.ttf
+doc/fonts/MPLUS1p-Bold.ttf
+doc/fonts/MPLUS1p-Regular.ttf
+doc/fonts/Raleway-Bold.ttf
+doc/fonts/Raleway-BoldItalic.ttf
+doc/fonts/Raleway-Italic.ttf
+doc/fonts/Raleway-Regular.ttf
+doc/images/architecture.png
+doc/images/delete_review_dialog.png
+doc/images/editing_data.png
+doc/images/mainscreen1.png
+doc/images/mainscreen2.png
+doc/images/mainscreen3.png
+doc/images/review_deleted.png
+doc/images/reviews.png
+doc/images/successfull update.png
+doc/images/unsuccessful login.png
+doc/S2010307022_Kofler-Hofer.adoc
+doc/theme/basic-theme.yml
+doc/theme/basic-theme.yml
+/doc/fonts/
+*.ttf
+doc/fonts/mplus-1m-regular.ttf
+doc/fonts/IBMPlexSans-BoldItalic.ttf
+doc/fonts/IBMPlexSans-Italic.ttf
