--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ doc/theme/basic-theme.yml
 doc/fonts/mplus-1m-regular.ttf
 doc/fonts/IBMPlexSans-BoldItalic.ttf
 doc/fonts/IBMPlexSans-Italic.ttf
+/doc/fonts/
+/doc/theme/
